# dstatus-rs

./: .gitignore  Cargo.toml  README.md  dstatus.1  manifest.toml  tauri.conf.json
.github/workflows/: release.yml
dstatus-ui/: .eslintrc.cjs  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
dstatus-ui/src/: App.tsx  index.css  theme.ts  types.ts
dstatus-ui/src/components/: ConfigEditor.tsx  DaemonStatus.tsx  DiscordPreview.tsx  GettingStarted.tsx  TemplateGallery.tsx
icons/: icon.icns
scripts/: install.sh  local_install.sh
src/: config.rs  connection_state.rs  main.rs  rich_presence.rs  stream_manager.rs  tui.rs
src/gui/: mod.rs
