[package]
name = "dstatus-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Discord status manager"
authors = ["HudsonGraeme"]
repository = "https://github.com/HudsonGraeme/dstatus-rs"


[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive", "env"] }
regex = "1.10.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.8.0", features = ["v4"] }
toml = "0.8.13"
dirs = "5.0.1"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.28", features = ["signal"] }

[dev-dependencies]
tempfile = "3.10.1"
