[package]
name = "dstatus-rs"
version = "0.0.35"
edition = "2021"
license = "MIT"
description = "Discord status manager"
authors = ["HudsonGraeme"]
repository = "https://github.com/HudsonGraeme/dstatus-rs"

[[bin]]
name = "dstatus"
path = "src/main.rs"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive", "env"] }
regex = "1.10.5"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.8.0", features = ["v4"] }
toml = "0.8.13"
dirs = "5.0.1"
ratatui = { version = "0.27.0", features = ["all-widgets"] }
crossterm = "0.27.0"
unicode-width = "0.1.14"
signal-hook = "0.3.18"
version-compare = "0.2.0"

# Tauri dependencies
tauri = { version = "1.6", features = [
    "dialog-open",
    "dialog-save",
    "dialog-message",
    "fs-create-dir",
    "fs-exists",
    "fs-read-dir",
    "fs-read-file",
    "fs-write-file",
    "http-all",
    "notification-all",
    "os-all",
    "process-relaunch",
    "shell-open",
    "shell-execute",

    "devtools",
] }
tokio = { version = "1.0", features = ["full"] }

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.28", features = ["signal"] }

[dev-dependencies]
tempfile = "3.10.1"
